// Copyright 2021 Linka Cloud  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tests;

option go_package = "go.linka.cloud/protoc-gen-defaults/tests/pb";

import "defaults/defaults.proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/descriptor.proto";
import "tests/pb/types.proto";

message Test {
	string string_field = 1 [(defaults.value).string = "string_field"];
	int64 number_field = 2 [(defaults.value).int64 = 42];
	bool bool_field = 3 [(defaults.value).bool = true];
	enum Type {
		NONE = 0;
		ONE = 1;
		TWO = 2;
	}
	Type enum_field = 4 [(defaults.value).enum = 2];
	Test message_field = 5 [(defaults.value).message = {defaults: true}];
	repeated string repeated_string_field = 6;
	repeated Type repeated_message_field = 7;
	google.protobuf.Int64Value number_value_field = 8 [(defaults.value).int64 = 43];
	google.protobuf.StringValue string_value_field = 9 [(defaults.value).string = "string_value"];
	google.protobuf.BoolValue bool_value_field = 10 [(defaults.value).bool = false];
	google.protobuf.Timestamp time_value_field = 11 [(defaults.value).timestamp = "now"];
	google.protobuf.Duration duration_value_field = 12 [(defaults.value).duration = "42w"];

	oneof oneof {
		option (defaults.oneof) = "two";
		OneOfOne one = 13 [(defaults.value).message = {defaults: true, initialize: true}];
		OneOfTwo two = 14 [(defaults.value).message = {defaults: true, initialize: true}];
		OneOfThree three = 15 [(defaults.value).message = {defaults: true, initialize: true}];
		Type four = 16 [(defaults.value).enum = 1];
	}

	google.protobuf.DescriptorProto descriptor = 17 [(defaults.value).message = {defaults: true, initialize: true}];
	google.protobuf.Timestamp time_value_field_with_default = 18 [(defaults.value).timestamp = "1952-03-11T00:00:00Z"];
	bytes bytes = 19 [(defaults.value).bytes = "??"];
}
